--- a/src/app/pages/store/box-page/box-page.component.html
+++ b/src/app/pages/store/box-page/box-page.component.html
@@ -11,8 +11,9 @@
           <p-button icon="pi pi-times" styleClass="p-button-danger p-button-text" (onClick)="clearSearch()"
             [disabled]="!searchQuery"></p-button>
         </div>
-        <p-button icon="pi pi-times" label="Limpar Carrinho" class="btn-full"
-          styleClass="p-button-rounded p-button-danger p-button-text" (click)="clearBox()"></p-button>
+        <p-button icon="pi pi-trash" label="Limpar caixa"
+          styleClass="responsive-button p-button-rounded p-button-danger p-button-text" (click)="clearBox()"></p-button>
+
       </div>
       <p-table *ngIf="products.length > 0" class="p-0" [value]="products" styleClass="p-datatable-striped">
         <ng-template pTemplate="header">
@@ -29,14 +30,21 @@
               {{ product.title }}
             </td>
             <td style="text-align: center">
-              <div
-                [ngClass]="{'outofstock': product.quantity === 0, 'lowstock': product.quantity !== 0 && product.quantity <= 10, 'instock': product.quantity > 10}">
-                <span *ngIf="product.quantity !== 0">{{ product.quantity }} </span>
-                <span *ngIf="product.quantity === 0" class="badge">Fora de Estoque</span>
-                <i pTooltip="Produto abaixo do estoque minimo" tooltipPosition="top"
-                  *ngIf="product.quantity !== 0 && product.quantity <= product.min_quantity"
+              <div [ngClass]="{
+                'outofstock': (product.quantity - getQuantityInBudget(product._id).quantity) === 0,
+                'lowstock': (product.quantity - getQuantityInBudget(product._id).quantity) > 0 && (product.quantity - getQuantityInBudget(product._id).quantity) <= 10,
+                'instock': (product.quantity - getQuantityInBudget(product._id).quantity) > 10}">
+                <span *ngIf="(product.quantity - getQuantityInBudget(product._id).quantity) > 0">
+                  {{ product.quantity - getQuantityInBudget(product._id).quantity }}
+                </span>
+                <span *ngIf="(product.quantity - getQuantityInBudget(product._id).quantity) === 0" class="badge">
+                  Fora de Estoque
+                </span>
+                <i pTooltip="Produto abaixo do estoque minimo" tooltipPosition="top" *ngIf="(product.quantity - getQuantityInBudget(product._id).quantity) > 0 &&
+                    (product.quantity - getQuantityInBudget(product._id).quantity) <= product.min_quantity"
                   class="pi pi-exclamation-triangle information"></i>
               </div>
+
             </td>
             <td style="text-align: center">{{ product.price | currency:'BRL':'symbol':'1.2-2'}}</td>
             <td style="text-align: center">
@@ -71,6 +79,9 @@
             <td style="text-align: center">{{ item.price | currency:'BRL':'symbol':'1.2-2'}}</td>
             <td style="text-align: center">{{ (item.price * item.quantity) | currency:'BRL':'symbol':'1.2-2'}}</td>
             <td style="text-align: center">
+              <p-button icon="pi pi-eye" styleClass="p-button-rounded p-button-info p-button-outlined"
+                (click)="openSidebar(item)">
+              </p-button>
               <p-button icon="pi pi-trash" styleClass="p-button-rounded p-button-danger p-button-text"
                 (click)="remove(item)"></p-button>
             </td>
@@ -94,15 +105,6 @@
 <div class="col-12 p-0 ">
   <div class="card px-4 pt-4">
     <div class="p-fluid p-formgrid grid p-0">
-      <!-- Forma de Pagamento -->
-      <!-- <div class="col-12 md:col-2">
-        <span class="text-lg">Forma de Pagamento</span>
-        <p-dropdown styleClass="ng-dirty ng-invalid w-full mt-2" placeholder="Selecione" [options]="formPaymentOptions"
-          [(ngModel)]="selectedPayment" optionLabel="label" optionValue="value"
-          (onChange)="onFormPaymentSelected($event.value)">
-        </p-dropdown>
-      </div> -->
-
       <div class="col-12 md:col-5">
         <span class="text-lg">Forma de Pagamento</span>
         <div class="payment-options mt-2">
@@ -160,7 +162,7 @@
       <!-- Botão Finalizar -->
       <div class="col-12 md:col-2">
         <p-button label="Finalizar Venda" icon="pi pi-check" (click)="submitOrder()" styleClass="w-full mt-4"
-          [outlined]="true">
+          [outlined]="true" [disabled]="loading" [loading]="loading">
         </p-button>
       </div>
 
@@ -179,3 +181,30 @@
   </div>
 </div>
 <p-toast></p-toast>
+<p-sidebar [(visible)]="sidebarVisible" position="right" [baseZIndex]="10000">
+  <h3>Detalhes do Produto</h3>
+  <div *ngIf="selectedProduct">
+    <p>ID: {{ selectedProduct._id }}</p>
+    <p>Nome: {{ selectedProduct.title }}</p>
+    <p>
+      Estoque Atual:
+      <span [ngClass]="{
+        'outofstock': availableStock === 0,
+        'lowstock': availableStock !== 0 && availableStock <= 10,
+        'instock': availableStock > 10
+      }">
+        {{ availableStock }}
+      </span>
+    </p>
+    <div class="p-field">
+      <label for="editedPrice">Preço:</label>
+      <input pInputText id="editedPrice" [(ngModel)]="editedPrice" currencyMask
+        [options]="{ prefix: 'R$ ', thousands: '.', decimal: ',' }" />
+    </div>
+
+    <div class="p-mt-3">
+      <button pButton label="Salvar" (click)="saveEditedPrice()"></button>
+      <button pButton label="Cancelar" (click)="closeSidebar()" class="p-button-secondary"></button>
+    </div>
+  </div>
+</p-sidebar>
