--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -1,7 +1,8 @@
 <div class="card p-3">
   <p-menubar [model]="items">
     <ng-template pTemplate="start">
-      <p-avatar image="../assets/image/logo.png" shape="circle" styleClass="mr-2" size="xlarge"></p-avatar>
+      <p-avatar [image]="logoUrl" shape="circle" styleClass="mr-2" size="xlarge">
+      </p-avatar>
     </ng-template>
     <ng-template pTemplate="item" let-item>
       <ng-container *ngIf="item.routerLink; else urlRef">
