--- a/src/app/upload-page/upload-page.component.html
+++ b/src/app/upload-page/upload-page.component.html
@@ -1,10 +1,21 @@
 <p-divider>Escolha o Tipo de Upload</p-divider>
 <div class="card">
   <div class="field">
-    <p-radioButton name="uploadType" value="logo" label="Logo" [(ngModel)]="uploadType"
-      [disabled]="false"></p-radioButton>
-    <p-radioButton name="uploadType" value="pdf" label="PDF" [(ngModel)]="uploadType"
-      [disabled]="false"></p-radioButton>
+    <div>
+      <p-radioButton name="uploadType" value="logo" label="Logo" [(ngModel)]="uploadType"
+        [disabled]="false"></p-radioButton>
+      <div *ngIf="logoImage">
+        <img [src]="logoImage.filePath" alt="Logo" class="uploaded-image" style="width: 50px;" />
+      </div>
+    </div>
+    <div>
+      <p-radioButton name="uploadType" value="pdf" label="PDF" [(ngModel)]="uploadType"
+        [disabled]="false"></p-radioButton>
+      <div *ngIf="pdfImage">
+        <img [src]="pdfImage.filePath" alt="PDF" class="uploaded-image" style="width: 50px;" />
+      </div>
+    </div>
+
   </div>
   <p-fileUpload name="file" accept="image/*, application/pdf" maxFileSize="1000000"
     (onUpload)="onTemplatedUpload($event)" (onSelect)="onSelectedFiles($event)">
@@ -34,4 +45,3 @@
 
 </div>
 <p-toast></p-toast>
-<img *ngIf="image?.filePath" [src]="image?.filePath" alt="Imagem" />
