--- a/src/app/pages/store/box-page/box-page.component.html
+++ b/src/app/pages/store/box-page/box-page.component.html
@@ -167,7 +167,7 @@
       </div>
 
       <div class="col-12 md:col-2 text-center md:text-left btn2">
-        <p-splitButton class="pdf" label="Salvar como?" icon="pi pi-save" [model]="items"></p-splitButton>
+        <p-splitButton class="pdf" label="Salvar" icon="pi pi-save" [model]="items"></p-splitButton>
       </div>
       <div class="col-12 md:col-3 text-center md:text-left">
         <p-autoComplete [(ngModel)]="customerName" [suggestions]="filteredCustomers"
