--- a/src/app/pages/store/box-page/box-page.component.html
+++ b/src/app/pages/store/box-page/box-page.component.html
@@ -175,12 +175,12 @@
       </div>
       <div class="col-12 md:col-2 text-center md:text-left btn2">
         <!-- <p-splitButton class="pdf" label="Salvar" icon="pi pi-save" [model]="items"></p-splitButton> -->
-        <p-button class="button" icon="pi pi-print" iconPos="right" label="Imprimir"
+        <p-button class="button" icon="pi pi-file-pdf" iconPos="right" label="Salvar PDF"
           (click)="saveBoxAsPdf()"></p-button>
       </div>
       <div class="col-12 md:col-2 text-center md:text-left btn2">
         <!-- <p-splitButton class="pdf" label="Salvar" icon="pi pi-save" [model]="items"></p-splitButton> -->
-        <p-button class="button" icon="pi pi-print" iconPos="right" label="Imprimir"
+        <p-button class="button" icon="pi pi-receipt" iconPos="right" label="Imprimir cupom"
           (click)="printReceipt()"></p-button>
 
       </div>
