feat: Update user management page layout and enhance user interaction options

--- a/src/app/pages/account/user-management-page/user-management-page.component.html
+++ b/src/app/pages/account/user-management-page/user-management-page.component.html
@@ -1,21 +1,27 @@
 <div class="card">
-  <p-table [value]="user" [tableStyle]="{ 'min-width': '50rem' }">
+  <p-table [value]="user">
     <ng-template pTemplate="header">
       <tr>
-        <th>Name</th>
-        <th>Roles</th>
+        <th>#</th>
+        <th>Nome</th>
+        <th>Tipo de usuário</th>
         <th>Opções</th>
       </tr>
     </ng-template>
     <ng-template pTemplate="body" let-user>
       <tr>
+        <td> <p-avatar label="{{ user.name.charAt(0) }}" shape="circle"
+            styleClass="mr-2 bg-primary text-white"></p-avatar></td>
         <td>{{ user.name}}</td>
         <td>{{ user.roles }}</td>
         <td>
-          <button pButton type="button" label="Alterar" (click)="editUser(user)"></button>
-          <button pButton type="button" label="Excluir" (click)="deleteUser(user)"></button>
+          <button pButton pRipple type="button" icon="pi pi-trash" (click)="confirmDelete(user)" text rounded
+          severity="danger">
+          </button>
         </td>
       </tr>
     </ng-template>
   </p-table>
 </div>
+<p-confirmDialog></p-confirmDialog>
+<p-toast></p-toast>
