--- a/src/app/pages/store/box-page/box-page.component.html
+++ b/src/app/pages/store/box-page/box-page.component.html
@@ -151,7 +151,7 @@
       <!-- Subtotal -->
       <div class="col md:col-1">
         <span class="text-lg">Subtotal:</span>
-        <div class="text-lg font-bold mt-3">{{ grandTotal | currency: 'BRL':'symbol':'1.2-2' }}</div>
+        <div class="text-lg font-bold mt-3">{{ subtotal | currency: 'BRL':'symbol':'1.2-2' }}</div>
       </div>
 
       <!-- Valor Total -->
