--- a/src/app/pages/store/product-registration-page/product-registration-page.component.html
+++ b/src/app/pages/store/product-registration-page/product-registration-page.component.html
@@ -19,16 +19,15 @@
   </div>
   <div class="field col">
     <span class="font-bold block mb-1 truncate" pTooltip="Custo" tooltipPosition="top">Valor de compra</span>
-    <p-inputNumber formControlName="purchasePrice" inputId="currency-us" mode="currency" currency="BRL" locale="pt"
-      id="productPurchasePrice"
-      [ngClass]="{'uk-form-danger': (!form.controls['purchasePrice'].valid && !form.controls['purchasePrice'].pristine) }">
-    </p-inputNumber>
+    <input pInputText id="purchasePrice" formControlName="purchasePrice"
+      [ngClass]="{'uk-form-danger': (!form.controls['purchasePrice'].valid && !form.controls['purchasePrice'].pristine) }"
+      currencyMask [options]="{ prefix: 'R$ ', thousands: '.', decimal: ',' }" />
   </div>
   <div class="field col">
     <span class="font-bold block mb-1 truncate" pTooltip="Valor de venda" tooltipPosition="top">Valor de venda</span>
-    <p-inputNumber formControlName="price" id="productPrice" inputId="currency-us" mode="currency" currency="BRL"
-      locale="pt" [ngClass]="{'uk-form-danger': (!form.controls['price'].valid && !form.controls['price'].pristine) }">
-    </p-inputNumber>
+    <input pInputText id="price" formControlName="price"
+      [ngClass]="{'uk-form-danger': (!form.controls['price'].valid && !form.controls['price'].pristine) }" currencyMask
+      [options]="{ prefix: 'R$ ', thousands: '.', decimal: ',' }" />
   </div>
   <div class="field col buttons-container text-center pt-5">
     <p-button class="mr-2" icon="pi pi-check" label="Salvar" (click)="submit()" *ngIf="!busy"></p-button>
