--- a/src/app/pages/store/products-page/products-page.component.html
+++ b/src/app/pages/store/products-page/products-page.component.html
@@ -199,7 +199,7 @@
         <td style="text-align: center">
           <div class="flex align-items-center justify-content-center gap-3">
             <p-button *ngIf="!editing" icon="pi pi-cart-plus"
-              styleClass="p-button-rounded p-button-success p-button-outlined">
+              styleClass="p-button-rounded p-button-success p-button-outlined" (click)="addToBox(product)">
             </p-button>
             <button *ngIf="!editing" pButton pRipple type="button" pInitEditableRow icon="pi pi-pencil"
               (click)="onRowEditInit(product)" class="p-button-rounded p-button-warning p-button-outlined">
